--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "bootstrap": "4.0.0-beta.2",
+    "bootstrap-vue": "^1.4.1",
+    "element-ui": "^2.0.11",
+    "style-loader": "^0.19.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.1.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
